<resources>
    <string name="app_name">S185099 Galgespil_Aflevering</string>
    <string name="game_title">HangMan</string>
    <string name="easy_mode">Easy</string>
    <string name="standard_mode">Standard</string>
    <string name="hard_mode">Hard</string>
    <string name="couldNotFetchWord">Could not fetch the word:</string>
    <string name="ErrorAtStatus">No win/lose</string>
    <string name="ventVenligst">please wait</string>
    <string name="statusLost">YOU DIED</string>
    <string name="statusWon">You won!</string>
    <string name="aboutTitle">About</string>
    <string name="theGame">The Game:</string>
    <string name="theGameExplanation">The game HangMan is about guessing a random selected word by selecting one character at a time. If the guess is wrong, you lose 1 out of 6 lives. When all lives have been lost, the man will be hanged. A score will be calculated, based on the word and the number of lives left, when the game finishes.</string>
    <string name="DevTitle">Developer:</string>
    <string name="DevName">Asama Hayder s185099</string>
    <string name="course">created for the course: 62550 - fall 2019 on DTU</string>
    <string name="goBack"> Return</string>
    <string name="animals">Animals</string>
    <string name="cars">Cars</string>
    <string name="countries">Countries</string>
    <string name="movies">Movies</string>
    <string name="games">Games</string>
    <string name="food">Food</string>
    <string name="scoreListKey">scoreList</string>
    <string name="scoreReferenceFileKey">referenceFileKey</string>
    <string name="highScores">High Scores</string>
    <string name="numberOfTries">Number of tries: </string>
    <string name="chooseOwnWord">Choose word from list</string>
    <string name="chooseWord">Choose Word</string>
    <string name="somethingWentWrong">Something went wrong</string>


</resources>
