<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/dk_crayon_crumble"
        android:text="@string/aboutTitle"
        android:textColor="@color/white"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/goBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/aboutTitle"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/theGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theGame"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/theGameExplanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theGameExplanation"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/devTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/DevTitle"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/devName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DevName"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/course"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>